<resources>
    <string name="app_name">chutki</string>
    <string name="generic_error_string">An Unexpected Error occurred</string>
    <string name="image_load_failed_error">Image load failed</string>
    <string name="email_mandatory_error">Email is mandatory to register</string>
    <string name="invalid_email_error">Please enter a valid email address</string>
    <string name="password_mandatory_error">Password is mandatory</string>
    <string name="passwords_mismatch_error">Passwords do not match</string>
    <string name="password_criteria_error">Password should contain 8 characters, at least one upper case, lower case and a number</string>
    <string name="existing_user_error">User exists. Please Login</string>
    <string name="register_error">Could not register user</string>
    <string name="incorrect_creds_error">Credentials are incorrect</string>
    <string name="not_registered_error">User not registered</string>
    <string name="login_failure_error">Could not login.</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="existing_user_login_now">Existing User? Login Now</string>
    <string name="register">Register</string>
    <string name="verify_password">Verify Password</string>
    <string name="password">Password</string>
    <string name="welcome_to_chutki">Welcome to Chutki</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning</string>
</resources>