<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome_to_chutki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_email_text_layout"
        android:textSize="20sp"
        android:background="?selectableItemBackground"
        android:layout_marginBottom="@dimen/wide_margin"
        />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/c_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_email_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:singleLine="true"
            android:textColor="@color/white_alpha_80"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_email_text_layout"
        app:layout_constraintStart_toStartOf="@id/register_email_text_layout"
        app:layout_constraintEnd_toEndOf="@id/register_email_text_layout"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/wide_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:singleLine="true"
            android:textColor="@color/white_alpha_80"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_confirm_password_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_password_text_layout"
        app:layout_constraintStart_toStartOf="@id/register_password_text_layout"
        app:layout_constraintEnd_toEndOf="@id/register_password_text_layout"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/verify_password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/wide_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:singleLine="true"
            android:textColor="@color/white_alpha_80"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_password_text_layout"
        app:layout_constraintBottom_toTopOf="@id/new_user_login_tv"
        android:backgroundTint="@color/blue_200"
        android:textColor="@color/white"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:cornerRadius="4dp"/>

    <TextView
        android:id="@+id/new_user_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/existing_user_login_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?selectableItemBackground"
        android:padding="@dimen/normal_margin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>